# cherry

./: .dockerignore  .env  .gitignore  CONFIGURATION_REFACTOR.md  Cargo.toml  DOCKER_SUPPORT.md  Dockerfile  Makefile  QUICK_START.md  README.md  TESTING.md  TEST_COVERAGE_SUMMARY.md  config-docker.yaml  config-prod.yaml  config.json.example  config.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.rauthy.yaml  docker-compose.yml  docker-start.ps1  docker-start.sh  env.example  package-lock.json  package.json  run_tests.sh  start-with-env.ps1  start_streamserver_test.ps1  start_test_servers.ps1
crates/cherry/: .editorconfig  .eslintrc.json  .gitignore  AI_GUIDE.md  AI_WORKFLOW.md  ARCHITECTURE.md  ARCHITECTURE_COMPLETE.md  CODE_REVIEW_GUIDE.md  CODING_STANDARDS.md  CODING_STANDARDS_COMPLETE.md  DEBUG_GUIDE.md  DEVELOPMENT.md  DOCS.md  EMOJI_FEATURE_GUIDE.md  EMOJI_REACTION_TOGGLE.md  FRONTEND_DEVELOPMENT_GUIDE.md  LOGIN_FIX_SUMMARY.md  LOGIN_SUCCESS_SUMMARY.md  MESSAGE_CONTENT_PARSING.md  MESSAGE_PARSING_SUMMARY.md  MESSAGE_RECEIVING_GUIDE.md  MESSAGE_SENDING_GUIDE.md  MESSAGE_STORE_DESIGN.md  QUICK_START_AI.md  README.md  README_DEBUG.md  READ_POSITION_GUIDE.md  REPLY_FEATURE_GUIDE.md  SCROLL_POSITION_FIX.md  TEST_RUNNING_GUIDE.md  package-lock.json  package.json  pnpm-lock.yaml  start.bat  start_debug.ps1  test-runner.html  test_auth_fix.js  test_channel.js  test_debug.html  test_independent_conversations.html  (+9 more)
crates/cherry/.github/: pull_request_template.md
crates/cherry/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
crates/cherry/.storybook/: preview.tsx
crates/cherry/public/: debug.js
crates/cherry/scratch/: mock-db
crates/cherry/src/: App.css  App.stories.tsx  App.styles.ts  App.tsx  index.css  main.tsx  test-message-parsing.ts  test-message-receiving.ts  test-reaction-toggle.ts  test-reply-display.ts  test-send-message.ts
crates/cherry/src-tauri/: .env  Cargo.toml  build.rs  sqlite.db-shm  sqlite.db-wal  tauri.conf.json
crates/cherry/src-tauri/.sqlx/: query-407a8e754b2fc29b2cf3b1396e5457bab0322121aeff3ef3493657377827765d.json  query-fa6380c0c9d937e30be8c9368e95992726ae930b17f39cdd4765d5d183e7f6a0.json
crates/cherry/src-tauri/capabilities/: default.json
crates/cherry/src-tauri/migrations/: 20250619095126_initial.up.sql
crates/cherry/src-tauri/migrations/2025-06-17-063803_initial/: up.sql
crates/cherry/src-tauri/src/: client.rs  lib.rs  main.rs  types.rs
crates/cherry/src-tauri/src/client/: cherry.rs  stream.rs
crates/cherry/src-tauri/src/db/: api.rs  mod.rs  models.rs  repo.rs  schema.rs
crates/cherry/src/api/: api.ts  index.ts
crates/cherry/src/api/mock/: api.ts  (+1 more)
crates/cherry/src/components/: AsyncMessageImage.stories.tsx  ChatHeader.tsx  ContactList.tsx  ConversationContainer.tsx  ConversationView.tsx  DebugPanel.tsx  EmojiPicker.tsx  ImageMessage.tsx  ImageUploader.tsx  MessageDebug.tsx  MessageInput.tsx  MessageList.tsx  MessageListSimple.tsx  MessageListVirtural.tsx  MessageTest.tsx  NotificationManager.tsx  NotificationToast.tsx  README.md  ReplyMessage.tsx  ScrollTest.tsx  Sidebar.tsx  Sidebar_fixed.tsx  StatusBar.tsx  WindowControls.tsx  bidirectional-infinite-scroll.tsx
crates/cherry/src/data/: mockContacts.ts
crates/cherry/src/examples/: message-parsing-example.tsx
crates/cherry/src/hooks/: use-bidirectional-data.ts  useMessageReceiver.stories.tsx  useMessageReceiver.ts  useWindowsSize.ts
crates/cherry/src/pages/: login.tsx
crates/cherry/src/services/: README.md
crates/cherry/src/store/: README.md  auth.ts  contact.ts  conversation.ts  message.ts  notification.ts  readPosition.ts
crates/cherry/src/stories/: Button.stories.ts
crates/cherry/src/types/: MIGRATION.md  MIGRATION_COMPLETE.md  README.md  api.ts  contact.d.ts  contact.ts  conversation.ts  core.ts  events.ts  global.ts  index.ts  message.ts  settings.d.ts  settings.ts  typeUtils.ts  types.ts  ui.ts  user.ts  utils.ts
crates/cherry/src/utils/: index.ts
crates/cherry/templates/: README.md
crates/cherrycore/: Cargo.toml
crates/cherrycore/src/: jwt.rs  lib.rs  types.rs
crates/cherrycore/src/client/: cherry.rs  file.rs  mod.rs  stream.rs
crates/cherryserver/: .env  API_DOCUMENTATION.md  Cargo.toml  README.md  build.rs  config.dev.yaml  config.yaml  config_test.yaml  insert_test_user.sql  test_data.sql
crates/cherryserver-tests/: Cargo.toml
crates/cherryserver-tests/src/: lib.rs
crates/cherryserver/migrations/: 20250619134000_initial.down.sql  20250619134000_initial.sql  20250619134216_update_user.down.sql  20250619134216_update_user.up.sql  20250624095548_testdata.down.sql  20250624095548_testdata.up.sql  20250625000000_add_contacts_for_alice.down.sql  20250625000000_add_contacts_for_alice.up.sql  v1_initial.sql
crates/cherryserver/migrations/2025-06-19-070718_initial/: down.sql  up.sql
crates/cherryserver/src/: image.rs  jwt.rs  lib.rs  main.rs  server.rs
crates/cherryserver/src/api/: auth.rs  friend.rs  group.rs  mod.rs  routes.rs  types.rs
crates/cherryserver/src/auth/: extractors.rs  jwt.rs  middleware.rs  mod.rs
crates/cherryserver/src/config/: mod.rs
crates/cherryserver/src/db/: db.rs  friend.rs  group.rs  migration.rs  mock.rs  mod.rs  models.rs  pool.rs  repo.rs  repo_test.rs  schema.rs  tests.rs  user.rs
crates/cherryserver/tests/: db_tests.rs
crates/fileserver/: .env  Cargo.toml  config.dev.yaml
crates/fileserver/migrations/: 20250703015816_initial.sql
crates/fileserver/src/: fileserver.rs  main.rs
crates/fileserver/src/db/: models.rs  repo.rs
crates/streamserver/: Cargo.toml  config.dev.yaml  config_test.yaml
crates/streamserver/src/: acl_checker.rs  main.rs  stream.rs
crates/streamstore/: Cargo.toml  README.md
crates/streamstore/examples/: append.rs  async_append.rs
crates/streamstore/src/: entry.rs  errors.rs  lib.rs  mem_table.rs  reader.rs  reload.rs  segments.rs  store.rs  table.rs  wal.rs
docker/: dev-data.sql  init.sql
src/: segments.rs
test_message_sending/: Cargo.toml  README.md
test_message_sending/src/: main.rs  simple_test.rs
(+131 files in other folders)
