[package]
name = "cherry-test"
version = "0.1.0"
edition = "2021"

[dependencies]
cherrycore = { path = "../crates/cherrycore" }
tokio = { version = "1.0", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0" 
serde_json = "1.0.140"
