[package]
name = "cherrycore"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive", "rc", "serde_derive"] }
serde_yaml = "0.9.34"
uuid = { version = "1.17.0", features = ["serde"] }
# diesel = "2.2.10"
# diesel-async = { version = "0.3.1", features = ["postgres"] }
