[package]
name = "cherrycore"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
chrono = { version = "0.4.41", features = ["serde"] }
jsonwebtoken = "9.3.1"
serde = { version = "1.0.219", features = ["derive", "rc", "serde_derive"] }
serde_json = "1.0.140"
serde_with = { version = "3.13.0", features = ["base64"] }
serde_yaml = "0.9.34"
sqlx = "0.8.6"
uuid = { version = "1.17.0", features = ["serde", "v4"] }
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.20", features = ["json"] }
futures-util = "0.3.31"
async-tungstenite = { version = "0.29.1", features = ["tokio", "tokio-runtime"] }
log = "0.4.27"
# diesel = "2.2.10"
# diesel-async = { version = "0.3.1", features = ["postgres"] }
