[package]
name = "cherryserver-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }