[package]
name = "cherryserver"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "cherryserver"
path = "src/main.rs"

[[bin]]
name = "test_config"
path = "src/bin/test_config.rs"

[dependencies]
axum = "0.7.9"
bcrypt = "0.15.1"
chrono = { version = "0.4.39", features = ["serde"] }
config = "0.14.1"
deadpool-postgres = "0.14.0"
env_logger = "0.11.8"
jsonwebtoken = "9.3.0"
log = "0.4.27"
postgres = "0.19.9"
refinery = { version = "0.8.16", features = ["postgres"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9.34"
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7.12"
tower = "0.5.1"
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
