[package]
name = "cherryserver"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
diesel = { version = "2.2.11", features = ["postgres", "uuid", "chrono", "serde_json"] }
serde_json = "1.0.140"
sqlx = { version = "0.8", features = ["runtime-tokio"] }
use = "0.0.1-pre.0"
uuid = "1.17.0"
