[package]
name = "fileserver"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version="0.8.4",features=["multipart"]}
tokio = { version = "1.46.0", features = ["rt-multi-thread"] }
cherrycore = { path = "../cherrycore" }
# 图片处理相关依赖
image = "0.25"
multipart = "0.18"
tempfile = "3.10"
sha2 = "0.10"
hex = "0.4"
path-clean = "1.0"
uuid = "1.17.0"
chrono = "0.4.41"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
anyhow = "1.0.98"
serde_json = "1.0.140"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
tokio-util = "0.7.15"
futures-util = "0.3.31"
