[package]
name = "streamserver"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
axum = { version = "0.8.4", features = ["macros", "ws"] }
clap = { version = "4.5.40", features = ["derive", "env", "string"] }
serde = { version = "1.0.219", features = ["serde_derive"] }
serde_yaml = "0.9.34"
tokio = { version = "1.45.1", features = ["fs", "macros", "net", "rt-multi-thread"] }
cherrycore = { path = "../cherrycore" }
streamstore = { path = "../streamstore" }
serde_json = "1.0.140"
log = { version = "0.4.27", features = ["serde"] }
serde_with = { version = "3.13.0", features = ["base64"] }
uuid = "1.17.0"
tokio-util = "0.7.15"
futures-util = "0.3.31"
reqwest = "0.12.20"
env_logger = "0.11.8"
