[package]
name = "cherry"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cherry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2" }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
diesel = { version = "2.2.10", features = [
    "serde_json",
    "sqlite",
    "time",
    "returning_clauses_for_sqlite_3_35",
    "chrono",
    "r2d2",
] }
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
libsqlite3-sys = { version = "0.25", features = ["bundled", "bundled-windows"] }
anyhow = "1.0.98"
