[package]
name = "cherry"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "cherry_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15.7"

[dependencies]
cherrycore = { path = "../../cherrycore" }
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
anyhow = "1.0.98"
sqlx = { version = "0.8.6", features = [
    "sqlite",
    "runtime-tokio",
    "tls-native-tls",
    "chrono",
] }
async-tungstenite = { version = "0.29.1", features = ["tokio-runtime"] }
futures-util = "0.3"
log = "0.4.27"
env_logger = "0.11"
uuid = "1.17.0"
